--- a/letras.htm
+++ b/letras.htm
@@ -307,7 +307,7 @@
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
           navegador no soporta audio HTML5. </audio><br>
         <br>
-        <p class="letra">Voy a daros una pista, soy un niño anarquista.<br>No soy un socialista y mucho menos aliancista.<br>Todos mis amigos, están en mi interior.<br>Mi partido sólo soy yo, y por supuesto, mi religión.<br>Yo no tengo miedo a nada, no pidáis no os debo nada.<br>Sólo creo en mi mismo, pero no en vuestro fascismo.<br>Intentáis engañarme, no creo que podáis.<br>Destrozar mis ideas es lo que deseáis.<br>Yo no leo las revistas, ni concedo entrevistas.<br>Voy a daros una pista, soy un chico anarquista,<br>&nbsp;&nbsp;&nbsp; (Voy a daros una pista)...<br>&nbsp;&nbsp;&nbsp; Supercalifragilísticoespiralidoso.</p>
+        <p class="letra">Voy a daros una pista, soy un niño anarquista.<br>No soy un socialista y mucho menos falangista.<br>Todos mis amigos, están en mi interior.<br>Mi partido sólo soy yo, y por supuesto, mi religión.<br>Yo no tengo miedo a nada, no pidáis no os debo nada.<br>Sólo creo en mi mismo, pero no en vuestro fascismo.<br>Intentáis engañarme, no creo que podáis.<br>Destrozar mis ideas es lo que deseáis.<br>Yo no leo las revistas, ni concedo entrevistas.<br>Voy a daros una pista, soy un chico anarquista,<br>&nbsp;&nbsp;&nbsp; (Voy a daros una pista)...<br>&nbsp;&nbsp;&nbsp; Supercalifragilísticoespiralidoso.</p>
         <p class="volver"><a href="#inicio">Volver arriba</a></p>
         <p class="volver"><a href="#inicio"><br>
           </a></p>
