--- a/imagenes opal.html
+++ b/imagenes opal.html
@@ -29,7 +29,8 @@
   </head>
   <body>
     <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
@@ -49,43 +50,76 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>Sala Opal (2012)</h2>
-        <a href="imagenes/opal%202012/00.jpg"> <img src="imagenes/opal%202012/00.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/01.jpg"> <img src="imagenes/opal%202012/01.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/02.JPG"> <img src="imagenes/opal%202012/02.JPG"
+        <a href="imagenes/opal%202012/00.jpg"> <img src="imagenes/opal%202012/00.jpg"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/01.jpg"> <img src="imagenes/opal%202012/01.jpg"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/02.JPG"> <img src="imagenes/opal%202012/02.JPG"
+
             alt="foto1"> </a> <a href="imagenes/opal%202012/03.jpg"> <img src="imagenes/opal%202012/03.jpg">&nbsp;
-          </a> <a href="imagenes/opal%202012/04.jpg"> <img src="imagenes/opal%202012/04.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/06.jpg"> <img src="imagenes/opal%202012/06.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/07.JPG"> <img src="imagenes/opal%202012/07.JPG"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/08.JPG"> <img src="imagenes/opal%202012/08.JPG"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/09.JPG"> <img src="imagenes/opal%202012/09.JPG"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/10.JPG"> <img src="imagenes/opal%202012/10.JPG"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/11.jpg"> <img src="imagenes/opal%202012/11.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/12.jpg"> <img src="imagenes/opal%202012/12.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/13.jpg"> <img src="imagenes/opal%202012/13.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/14.JPG"> <img src="imagenes/opal%202012/14.JPG"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/15.jpg"> <img src="imagenes/opal%202012/15.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/16.jpg"> <img src="imagenes/opal%202012/16.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/17.jpg"> <img src="imagenes/opal%202012/17.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/18.jpg"> <img src="imagenes/opal%202012/18.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/19.JPG"> <img src="imagenes/opal%202012/19.JPG"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/20.jpg"> <img src="imagenes/opal%202012/20.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/21.jpg"> <img src="imagenes/opal%202012/21.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/22.jpg"> <img src="imagenes/opal%202012/22.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/23.jpg"> <img src="imagenes/opal%202012/23.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/24.jpg"> <img src="imagenes/opal%202012/24.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/25.jpg"> <img src="imagenes/opal%202012/25.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/26.JPG"> <img src="imagenes/opal%202012/26.JPG"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/27.JPG"> <img src="imagenes/opal%202012/27.JPG"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/28.JPG"> <img src="imagenes/opal%202012/28.JPG"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/29.JPG"> <img src="imagenes/opal%202012/29.JPG"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/30.JPG"> <img src="imagenes/opal%202012/30.JPG"></a><a
-          href="imagenes/opal%202012/32.JPG"><img src="imagenes/opal%202012/32.JPG"></a><a
-          href="imagenes/opal%202012/33.JPG"><img src="imagenes/opal%202012/33.JPG"></a><a
-          href="imagenes/opal%202012/35.JPG"><img src="imagenes/opal%202012/35.JPG"></a><a
-          href="imagenes/opal%202012/30.JPG"> </a> </section>
+          </a> <a href="imagenes/opal%202012/04.jpg"> <img src="imagenes/opal%202012/04.jpg"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/06.jpg"> <img src="imagenes/opal%202012/06.jpg"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/07.JPG"> <img src="imagenes/opal%202012/07.JPG"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/08.JPG"> <img src="imagenes/opal%202012/08.JPG"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/09.JPG"> <img src="imagenes/opal%202012/09.JPG"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/10.JPG"> <img src="imagenes/opal%202012/10.JPG"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/11.jpg"> <img src="imagenes/opal%202012/11.jpg"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/12.jpg"> <img src="imagenes/opal%202012/12.jpg"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/13.jpg"> <img src="imagenes/opal%202012/13.jpg"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/14.JPG"> <img src="imagenes/opal%202012/14.JPG"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/15.jpg"> <img src="imagenes/opal%202012/15.jpg"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/16.jpg"> <img src="imagenes/opal%202012/16.jpg"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/17.jpg"> <img src="imagenes/opal%202012/17.jpg"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/18.jpg"> <img src="imagenes/opal%202012/18.jpg"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/19.JPG"> <img src="imagenes/opal%202012/19.JPG"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/20.jpg"> <img src="imagenes/opal%202012/20.jpg"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/21.jpg"> <img src="imagenes/opal%202012/21.jpg"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/22.jpg"> <img src="imagenes/opal%202012/22.jpg"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/23.jpg"> <img src="imagenes/opal%202012/23.jpg"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/24.jpg"> <img src="imagenes/opal%202012/24.jpg"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/25.jpg"> <img src="imagenes/opal%202012/25.jpg"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/26.JPG"> <img src="imagenes/opal%202012/26.JPG"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/27.JPG"> <img src="imagenes/opal%202012/27.JPG"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/28.JPG"> <img src="imagenes/opal%202012/28.JPG"
+
+            alt="foto1"> </a> <a href="imagenes/opal%202012/29.JPG"> <img src="imagenes/opal%202012/29.JPG"
+
+            alt="foto2"> </a> <a href="imagenes/opal%202012/30.JPG"> <img src="imagenes/opal%202012/30.JPG"></a><a
+
+          href="imagenes/opal%202012/32.JPG"><img src="imagenes/opal%202012/32.JPG"></a><a
+
+          href="imagenes/opal%202012/33.JPG"><img src="imagenes/opal%202012/33.JPG"></a><a
+
+          href="imagenes/opal%202012/35.JPG"><img src="imagenes/opal%202012/35.JPG"></a><a
+
+         </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
     <script src="js/lightbox.js"></script>
   </body>
 </html>
+
